--- a/src/sass.html
+++ b/src/sass.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="stylesheet" href="css/main.scss">
     <script src="js/main.js" type="module"></script>
-    <title>Startsida</title>
+    <title>SASS</title>
 </head>
 
 <body>
