lägger till bilder

--- a/src/index.html
+++ b/src/index.html
@@ -46,7 +46,15 @@
             <section>
                 <h2>Moment x Laborationsuppgift</h2>
                 <div class="text-box">
-                    <p></p>
+                    <picture>
+                        <source srcset="./images/Falsterbo2.jpg?as=avif&width=400" type="image/avif">
+                        <img src="./images/Falsterbo2.jpg" 
+                            alt="en hamn med stora båtar i bakgrunden och jollar i förgrunden">
+                    </picture>
+                    <picture>
+                        <source srcset="./images/KalmarSlott2.jpg?as=avif&width=400" type="image/avif">
+                        <img src="./images/KalmarSlott2.jpg" alt="Kalmar slott med en vallgrav framför">
+                    </picture>
                 </div>
             </section>
         </main>
