index-sidan får innehåll och design för mobilversion

--- a/src/index.html
+++ b/src/index.html
@@ -33,28 +33,33 @@
                     </span>
                     <span class="menu-text">Stäng</span>
                 </button>
-                    <ul>
-                        <li><a href="index.html">Startsida</a></li>
-                        <li><a href="sass.html">SASS</a></li>
-                        <li><a href="#">Om oss</a></li>
-                        <li><a href="#">Kontakt</a></li>
-                        <li><a href="#">Logga in</a></li>
-                    </ul>
-                </nav>
+                <ul>
+                    <li><a href="index.html">Startsida</a></li>
+                    <li><a href="sass.html">SASS</a></li>
+                    <li><a href="#">Om oss</a></li>
+                    <li><a href="#">Kontakt</a></li>
+                    <li><a href="#">Logga in</a></li>
+                </ul>
+            </nav>
         </header>
         <main class="content">
             <section>
-                <h2>Moment x Laborationsuppgift</h2>
-                <div class="text-box">
+                <h2>Semester i södra Sverige</h2>
+                <div class="image-box">
                     <picture>
                         <source srcset="./images/Falsterbo2.jpg?as=avif&width=400" type="image/avif">
-                        <img src="./images/Falsterbo2.jpg" 
-                            alt="en hamn med stora båtar i bakgrunden och jollar i förgrunden">
+                        <img src="./images/Falsterbo2.jpg"
+                            alt="en hamn med stora båtar i bakgrunden och jollar i förgrunden" class="images">
                     </picture>
+                    <p>I Falsterbo, nästan så långt söder ut som man kan komma i Sverige, kan man gå i hamnen och kolla
+                        på båtar, äta god mat och bada på de vita stränderna. </p>
                     <picture>
                         <source srcset="./images/KalmarSlott2.jpg?as=avif&width=400" type="image/avif">
-                        <img src="./images/KalmarSlott2.jpg" alt="Kalmar slott med en vallgrav framför">
+                        <img src="./images/KalmarSlott2.jpg" alt="Kalmar slott med en vallgrav framför" class="images">
                     </picture>
+                    <p>I Smålands Kalmar kan du besöka det över 800 år gamla slottet som är en stor del av
+                        Sveriges och kalmarunionens historia. Man kan även snabbt och smidigt ta sig över till
+                        sommarparadiset Öland via färjan M/S Dessi eller ta bilen över Ölandsbron. </p>
                 </div>
             </section>
         </main>
