grundinnehåll och style för sass-sidan

--- a/src/sass.html
+++ b/src/sass.html
@@ -33,20 +33,25 @@
                     </span>
                     <span class="menu-text">Stäng</span>
                 </button>
-                    <ul>
-                        <li><a href="index.html">Startsida</a></li>
-                        <li><a href="sass.html">SASS</a></li>
-                        <li><a href="#">Om oss</a></li>
-                        <li><a href="#">Kontakt</a></li>
-                        <li><a href="#">Logga in</a></li>
-                    </ul>
-                </nav>
+                <ul>
+                    <li><a href="index.html">Startsida</a></li>
+                    <li><a href="sass.html">SASS</a></li>
+                    <li><a href="#">Om oss</a></li>
+                    <li><a href="#">Kontakt</a></li>
+                    <li><a href="#">Logga in</a></li>
+                </ul>
+            </nav>
         </header>
-        <main class="content">
-            <section>
-                <h2>Moment x Laborationsuppgift</h2>
+        <main>
+            <section class="sass-content">
+                <h2>Moment 3 - SASS</h2>
                 <div class="text-box">
-                    <p></p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos alias maxime, culpa praesentium
+                        perferendis quia ad nobis dolorum pariatur, cupiditate delectus aut perspiciatis, architecto
+                        veniam possimus. Expedita praesentium atque beatae? Lorem ipsum dolor sit amet consectetur
+                        adipisicing elit. Id aliquam porro ducimus, beatae voluptatum totam, eum vel quam reprehenderit
+                        doloremque minima obcaecati natus consequatur, excepturi cumque sunt molestiae ea? Explicabo.
+                    </p>
                 </div>
             </section>
         </main>
