lägger till knapp, style och media query

--- a/src/index.html
+++ b/src/index.html
@@ -68,6 +68,7 @@
                     </div>
                 </div>
             </section>
+            <div class="button">Se mer</div> 
         </main>
         <footer>
             <p>
