Små uppdateringar av texten

--- a/src/sass.html
+++ b/src/sass.html
@@ -52,11 +52,11 @@
                         koden för de olika delarna, till exempel klurade jag mycket på var stylingen på själva
                         innehållet på de olika sidorna skulle vara. Det första jag gjorde var att helt och hållet ta
                         strukturen som stod på 7-1-sidan men kom snabbt fram till att det kanske inte riktigt passade
-                        min nivå med detta arbete. Till slut kom jag fram till att det kunde finnas en mapp “pages” som
-                        kunde innehålla filer med namnen på olika sidorna där deras layout kunde stylas, istället för
-                        att ha en “layout”-partial i mappen “layout”. Själva kodandet med utseendet på komponenterna har
-                        varit relativt enkelt att förstå, men ibland har man fått fundera över var, när och hur man ska
-                        använda sig av mixins, variabler eller placeholders/inheritance.
+                        min nivå med detta arbete. Efter mycket ändringar fram och tillbaka med mappar och filer så
+                        känner jag mig nöjd med min struktur jag har nu och den känns tydligt och enkel för mig när jag
+                        ska hitta i koden. Själva kodandet med utseendet på komponenterna har varit relativt enkelt att
+                        förstå, men ibland har man fått fundera över var, när och hur man ska använda sig av mixins,
+                        variabler eller placeholders/inheritance.
                     </p><br>
                     <p>
                         När det kommer till fördelar och nackdelar med SASS så såg jag till en början mer nackdelar, men
@@ -69,7 +69,7 @@
                         som man vill använda dessa metoder för att styla. Ibland glömmer man av det eller att skriva
                         filnamnet innan själva variabeln/mixin/extend, vilket gör att man fastnar en stund innan man
                         inser vad man har missat i koden för att det ska fungera. Det har lett till att arbetet tagit
-                        lite längre tid än väntat, och det är frustrerande att fastna ofta när det är så små fel.
+                        lite längre tid än väntat, och det är frustrerande att fastna ofta när det är små fel.
                         Metoden för hur man använder metoderna är också olika, till exempel så behöver man inte skriva
                         filnamnet innan @extend namnet, men det behöver man på variablerna och det kan vara lite
                         förvirrande ibland. Från detta tar jag dock med mig att direkt lägga in @use för filerna med
@@ -94,9 +94,9 @@
                     <p>
                         Sammanfattningsvis så har det varit en utmaning att lära sig och utveckla webbplatsen med SASS,
                         men under tidens gång har det växt på mig och det känns som det kan underlätta mycket i ens
-                        arbete. Det finns mycket fördelar med att använda sig av SASS och med tidens gång, när man mer
-                        kommit in mer i arbetssättet, så tror jag att nackdelarna kommer bli färre. Speciellt sånt som
-                        att missa filnamnet från den importerade variabeln.
+                        arbete. Det finns mycket fördelar med att använda sig av SASS och när man kommit in mer i
+                        arbetssättet, så tror jag att nackdelarna kommer bli färre. Speciellt sånt som att missa
+                        filnamnet från den importerade variabeln.
 
                     </p>
                 </div>
