--- a/src/index.html
+++ b/src/index.html
@@ -52,23 +52,31 @@
                             <img src="./images/Falsterbo2.jpg"
                                 alt="en hamn med stora båtar i bakgrunden och jollar i förgrunden" class="images">
                         </picture>
-                        <p>I Falsterbo, nästan så långt söder ut som man kan komma i Sverige, kan man gå i hamnen och
-                            kolla
-                            på båtar, äta god mat och bada på de vita stränderna. </p>
+                        <p>Falsterbo, en pärla vid kusten, bjuder på en perfekt blandning av naturskönhet och charmig
+                            atmosfär. Hamnen i Falsterbo är en plats där det marina livet möter den lugna landsbygden,
+                            och här kan du njuta av friska havsvindar medan du promenerar längs kajen. För den som söker
+                            avkoppling eller äventyr finns allt från mysiga kaféer till vattensporter och båtutflykter.
+                            Och för sol- och badälskare är de stora, vita stränderna ett perfekt ställe att koppla av
+                            eller ta en härlig promenad längs kusten. Utforska Falsterbos hamn och stränder och upptäck
+                            varför denna lilla kuststad är ett måste på din resa.</p>
                     </div>
-                    <div id="image2"> 
+                    <div id="image2">
                         <picture>
                             <source srcset="./images/KalmarSlott2.jpg?as=avif&width=400" type="image/avif">
                             <img src="./images/KalmarSlott2.jpg" alt="Kalmar slott med en vallgrav framför"
                                 class="images">
                         </picture>
-                        <p>I Smålands Kalmar kan du besöka det över 800 år gamla slottet som är en stor del av
-                            Sveriges och kalmarunionens historia. Man kan även snabbt och smidigt ta sig över till
-                            sommarparadiset Öland via färjan M/S Dessi eller ta bilen över Ölandsbron. </p>
+                        <p>I Smålands Kalmar kan du besöka det över 800 år gamla Kalmar Slott, en historisk höjdpunkt som
+                            har spelat en central roll i Sveriges och Kalmarunionens historia. Slottets imponerande
+                            arkitektur och medeltida atmosfär ger en fascinerande inblick i landets förflutna. För den
+                            som vill utforska mer av området är det enkelt att ta sig vidare till sommarparadiset Öland.
+                            Hoppa på färjan M/S Dessi för en snabb och naturskön resa, eller kör över den majestätiska
+                            Ölandsbron som binder samman de två landskapen. Kalmar och Öland erbjuder en perfekt
+                            kombination av historia, natur och kultur. </p>
                     </div>
                 </div>
             </section>
-            <div class="button">Se mer</div> 
+            <div class="button">Se mer</div>
         </main>
         <footer>
             <p>
