uppdatering av text

--- a/src/index.html
+++ b/src/index.html
@@ -52,13 +52,11 @@
                             <img src="./images/Falsterbo2.jpg"
                                 alt="en hamn med stora båtar i bakgrunden och jollar i förgrunden" class="images">
                         </picture>
-                        <p>Falsterbo, en pärla vid kusten, bjuder på en perfekt blandning av naturskönhet och charmig
-                            atmosfär. Hamnen i Falsterbo är en plats där det marina livet möter den lugna landsbygden,
-                            och här kan du njuta av friska havsvindar medan du promenerar längs kajen. För den som söker
-                            avkoppling eller äventyr finns allt från mysiga kaféer till vattensporter och båtutflykter.
-                            Och för sol- och badälskare är de stora, vita stränderna ett perfekt ställe att koppla av
-                            eller ta en härlig promenad längs kusten. Utforska Falsterbos hamn och stränder och upptäck
-                            varför denna lilla kuststad är ett måste på din resa.</p>
+                        <p>Falsterbo, en pärla vid kusten, bjuder på en blandning av naturskönhet och charmig atmosfär.
+                            Hamnen, där det marina livet möter landsbygden, erbjuder friska havsvindar och mysiga
+                            promenader längs kajen. Här finns något för alla – från kaféer till båtutflykter. För sol-
+                            och badälskare lockar de vita stränderna, perfekta för avkoppling eller en härlig promenad.
+                            Utforska Falsterbos hamn och stränder och upptäck varför denna kuststad är ett måste.</p>
                     </div>
                     <div id="image2">
                         <picture>
@@ -66,13 +64,11 @@
                             <img src="./images/KalmarSlott2.jpg" alt="Kalmar slott med en vallgrav framför"
                                 class="images">
                         </picture>
-                        <p>I Smålands Kalmar kan du besöka det över 800 år gamla Kalmar Slott, en historisk höjdpunkt som
-                            har spelat en central roll i Sveriges och Kalmarunionens historia. Slottets imponerande
-                            arkitektur och medeltida atmosfär ger en fascinerande inblick i landets förflutna. För den
-                            som vill utforska mer av området är det enkelt att ta sig vidare till sommarparadiset Öland.
-                            Hoppa på färjan M/S Dessi för en snabb och naturskön resa, eller kör över den majestätiska
-                            Ölandsbron som binder samman de två landskapen. Kalmar och Öland erbjuder en perfekt
-                            kombination av historia, natur och kultur. </p>
+                        <p>I Smålands Kalmar kan du besöka det över 800 år gamla Kalmar Slott, en historisk höjdpunkt
+                            med central betydelse för både Sverige och Kalmarunionen. Slottets medeltida atmosfär ger en
+                            fascinerande inblick i landets historia. För den som vill utforska mer är det enkelt att ta
+                            sig till Öland, antingen med färjan M/S Dessi eller via den majestätiska Ölandsbron. Kalmar
+                            och Öland erbjuder en perfekt blandning av historia, natur och kultur.</p>
                     </div>
                 </div>
             </section>
