--- a/src/index.html
+++ b/src/index.html
@@ -36,7 +36,7 @@
                 <ul>
                     <li><a href="index.html">Startsida</a></li>
                     <li><a href="sass.html">SASS</a></li>
-                    <li><a href="#">Om oss</a></li>
+                    <li><a href="animation.html">Animationer</a></li>
                     <li><a href="#">Kontakt</a></li>
                     <li><a href="#">Logga in</a></li>
                 </ul>
