--- a/src/animation.html
+++ b/src/animation.html
@@ -44,20 +44,19 @@
         </header>
         <main>
             <h2 id="A-h2">Moment 4 - Animering</h2>
-            <div class="box"></div>
-            <div class="a-btn">Klicka här</div>
-            <section class="golf-animation">
-                <picture>
-                    <source srcset="./images/Driver.png?as=avif&width=400" type="image/avif">
-                    <img src="./images/Driver.png"
-                        alt="en golfklubba" class="golfclub">
-                </picture>
-                <picture>
-                    <source srcset="./images/callaway3.png?as=avif&width=90" type="image/avif">
-                    <img src="./images/callaway3.png" 
-                        alt="en golfklubba" class="golfball">
-                </picture>
-            </section>
+            <div class="animation-container">
+                <section class="golf-animation">
+                    <picture>
+                        <source srcset="./images/Driver.png?as=avif&width=400" type="image/avif">
+                        <img src="./images/Driver.png" alt="en golfklubba" class="golfclub">
+                    </picture>
+                    <picture>
+                        <source srcset="./images/callaway3.png?as=avif&width=90" type="image/avif">
+                        <img src="./images/callaway3.png" alt="en golfklubba" class="golfball">
+                    </picture>
+                </section>
+                <div class="a-btn">Klicka för att slå bollen</div>
+            </div>
         </main>
         <footer>
             <p>
