Lägger till knapp, textrutan och cirkel

--- a/src/animation.html
+++ b/src/animation.html
@@ -56,6 +56,10 @@
                     </picture>
                 </section>
                 <div class="a-btn">Klicka för att slå bollen</div>
+                <div class="circle-container">
+                    <div class="circle"></div>
+                    <p>Här snurrar det</p>
+                </div>
             </div>
         </main>
         <footer>
