Lägger till en textbox

--- a/src/animation.html
+++ b/src/animation.html
@@ -45,6 +45,9 @@
         <main>
             <h2 id="A-h2">Moment 4 - Animering</h2>
             <div class="animation-container">
+                <div class="box">
+                    <p>Välkommen</p>
+                </div>
                 <section class="golf-animation">
                     <picture>
                         <source srcset="./images/Driver.png?as=avif&width=400" type="image/avif">
