Lägger till bild på solros

--- a/src/animation.html
+++ b/src/animation.html
@@ -48,6 +48,12 @@
                 <div class="box">
                     <p>Välkommen</p>
                 </div>
+                <div id="flower-image">
+                    <picture>
+                        <source srcset="./images/logoicon.png?as=avif&width=300" type="image/avif">
+                        <img src="./images/logoicon.png" alt="en solros" class="sunflower">
+                    </picture>
+                </div>
                 <section class="golf-animation">
                     <picture>
                         <source srcset="./images/Driver.png?as=avif&width=400" type="image/avif">
