--- a/src/animation.html
+++ b/src/animation.html
@@ -37,8 +37,8 @@
                     <li><a href="index.html">Startsida</a></li>
                     <li><a href="sass.html">SASS</a></li>
                     <li><a href="animation.html">Animering</a></li>
-                    <li><a href="#">Kontakt</a></li>
-                    <li><a href="#">Logga in</a></li>
+                    <li><a href="diagram.html">Diagram</a></li>
+                    <li><a href="karta.html">Karta</a></li>
                 </ul>
             </nav>
         </header>
