--- a/src/animation.html
+++ b/src/animation.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="stylesheet" href="css/main.scss">
     <script src="js/main.js" type="module"></script>
+    <script src="js/animation.js" type="module"></script>
     <title>Animationer</title>
 </head>
 
