lägger till element att lägga in kartan i

--- a/src/karta.html
+++ b/src/karta.html
@@ -7,6 +7,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="stylesheet" href="css/main.scss">
     <script src="js/main.js" type="module"></script>
+    <script src="js/map.js" type="module"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.8/dist/chart.umd.min.js"></script>
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
+        integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin="" />
+    <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
+        integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script>
     <title>Karta</title>
 </head>
 
@@ -43,8 +49,14 @@
             </nav>
         </header>
         <main>
-            <section class="sass-content">
+            <section class="map-content">
                 <h2>Moment 5</h2>
+                <form id="searchForm">
+                    <label for="searchInput">Sök plats</label>
+                    <input type="text" id="searchInput" placeholder="Sök efter en plats">
+                    <button id="submit">Sök</button>
+                </form>
+                <div id="map"></div>
             </section>
         </main>
         <footer>
