--- a/src/diagram.html
+++ b/src/diagram.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="stylesheet" href="css/main.scss">
     <script src="js/main.js" type="module"></script>
-    <script src="js/chart.js" type="module"></script>
+    <script src="js/mapchart.js" type="module"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.8/dist/chart.umd.min.js"></script>
     <title>Diagram</title>
 </head>
