Knapp med länk till jsdoc

--- a/src/karta.html
+++ b/src/karta.html
@@ -58,6 +58,9 @@
                 </form>
                 <div id="map"></div>
             </section>
+            <div class="doc">
+                <a href="../out/index.html">JSDoc</a>
+            </div>
         </main>
         <footer>
             <p>
