--- a/src/diagram.html
+++ b/src/diagram.html
@@ -58,6 +58,9 @@
                     </div>
                 </div>
             </section>
+            <div class="doc">
+                <a href="../out/index.html">JSDoc</a>
+            </div>
         </main>
         <footer>
             <p>
